<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_razones"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.telassimgomez.studyjam_proyectofinal.CalentamientoFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fondoprincipall"
        android:alpha="0.7"></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:orientation="vertical"
            android:background="@drawable/fondoprincipal"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_titulo"
                android:text="@string/titulo_razones"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/tamanio_titulo"
                android:textStyle="bold|italic"
                android:textColor="@color/colorLetra"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="@dimen/margin_activity">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:src="@drawable/razon1"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/razon_1"
                            android:textSize="@dimen/tamanio_letra"
                            android:layout_marginLeft="@dimen/margin_medio"
                            android:gravity="center"
                            android:textColor="@color/colorLetra2"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/razon_2"
                            android:textSize="@dimen/tamanio_letra"
                            android:layout_marginLeft="@dimen/margin_medio"
                            android:gravity="center"
                            android:textColor="@color/colorLetra2"/>
                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:src="@drawable/razon2"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:src="@drawable/razon3"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/razon_3"
                            android:textSize="@dimen/tamanio_letra"
                            android:layout_marginLeft="@dimen/margin_medio"
                            android:gravity="center"
                            android:textColor="@color/colorLetra2"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/razon_4"
                            android:textSize="@dimen/tamanio_letra"
                            android:layout_marginLeft="@dimen/margin_medio"
                            android:gravity="center"
                            android:textColor="@color/colorLetra2"/>
                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:src="@drawable/razon4"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:src="@drawable/razon5"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/razon_5"
                            android:textSize="@dimen/tamanio_letra"
                            android:layout_marginLeft="@dimen/margin_medio"
                            android:gravity="center"
                            android:textColor="@color/colorLetra2"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/razon_6"
                            android:textSize="@dimen/tamanio_letra"
                            android:layout_marginLeft="@dimen/margin_medio"
                            android:gravity="center"
                            android:textColor="@color/colorLetra2"/>
                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:src="@drawable/razon6"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:src="@drawable/razon7"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/razon_7"
                            android:textSize="@dimen/tamanio_letra"
                            android:layout_marginLeft="@dimen/margin_medio"
                            android:gravity="center"
                            android:textColor="@color/colorLetra2"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/razon_8"
                            android:textSize="@dimen/tamanio_letra"
                            android:layout_marginLeft="@dimen/margin_medio"
                            android:gravity="center"
                            android:textColor="@color/colorLetra2"/>
                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:src="@drawable/razon8"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:src="@drawable/razon9"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/razon_9"
                            android:textSize="@dimen/tamanio_letra"
                            android:layout_marginLeft="@dimen/margin_medio"
                            android:gravity="center"
                            android:textColor="@color/colorLetra2"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/razon_10"
                            android:textSize="@dimen/tamanio_letra"
                            android:layout_marginLeft="@dimen/margin_medio"
                            android:gravity="center"
                            android:textColor="@color/colorLetra2"/>
                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:src="@drawable/razon10"/>
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>

