<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_calentamiento"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fondoprincipall"
        android:alpha="0.7"></LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      android:gravity="center">
      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="85dp"
          android:orientation="vertical"
          android:background="@drawable/fondoprincipal"
          android:gravity="center">
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_margin="@dimen/margin_titulo"
              android:text="@string/titulo_calentamiento"
              android:layout_gravity="center_horizontal"
              android:textSize="@dimen/tamanio_titulo"
              android:textStyle="bold|italic"
              android:gravity="center"
              android:textColor="@color/colorLetra"/>
      </LinearLayout>
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="vertical">
          <ScrollView
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

              <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:layout_margin="@dimen/margin_activity">

                  <RelativeLayout
                      android:layout_width="match_parent"
                      android:layout_height="0dp"
                      android:layout_weight="3">
                      <ImageView
                          android:id="@+id/imgcal1"
                          android:layout_width="match_parent"
                          android:layout_height="@dimen/tamanio_imagen"
                          android:src="@drawable/calentamiento"
                          android:layout_centerInParent="true"/>
                      <ImageView
                          android:id="@+id/imgcal2"
                          android:layout_width="match_parent"
                          android:layout_height="@dimen/tamanio_imagen"
                          android:src="@drawable/calglobal"
                          android:layout_centerInParent="true"
                          android:visibility="invisible"/>
                  </RelativeLayout>

                  <TextView
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:text="@string/calentamiento"
                      android:textSize="@dimen/tamanio_letra"
                      android:layout_marginTop="@dimen/margin_medio_vertical"
                      android:gravity="center"
                      android:textColor="@color/colorLetra2"/>
                  <TextView
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:text="@string/sub_consecuencias"
                      android:textSize="@dimen/tamanio_subtitulo"
                      android:textStyle="bold|italic"
                      android:layout_marginTop="@dimen/margin_arriba_sub"
                      android:gravity="center"
                      android:textColor="@color/colorLetra"/>
                  <TextView
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:text="@string/consecuencias"
                      android:textSize="@dimen/tamanio_letra"
                      android:gravity="center"
                      android:textColor="@color/colorLetra2"
                      android:layout_marginBottom="150dp"/>
              </LinearLayout>
          </ScrollView>


      </LinearLayout>

  </LinearLayout>

</RelativeLayout>
